<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/profil">

  <android.support.design.widget.AppBarLayout
      android:id="@+id/app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="250dp"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      android:fitsSystemWindows="true">

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleMarginStart="48dp"
        app:expandedTitleMarginEnd="64dp"
        android:fitsSystemWindows="true">

      <ImageView

          android:id="@+id/profilView"
          android:layout_width="match_parent"
          android:layout_height="250dp"
          android:background="#ffffff"
          android:fitsSystemWindows="true"
          android:scaleType="centerCrop"
          app:layout_collapseMode="parallax"
          tools:srcCompat="@tools:sample/avatars" />


      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
          app:layout_collapseMode="pin" />

    </android.support.design.widget.CollapsingToolbarLayout>

  </android.support.design.widget.AppBarLayout>



  <android.support.v4.widget.NestedScrollView
      android:id="@+id/scroll"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          app:cardElevation="@dimen/spacing_medium"
          app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


          <TextView
              android:id="@+id/nameProfilView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginTop="24dp"
              android:text="nom"
              android:textSize="20dp"
              android:textStyle="bold"

              />

          <LinearLayout
              android:layout_width="194dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="18dp"
              android:gravity="clip_horizontal"
              android:orientation="horizontal">


            <ImageView
                android:layout_width="19dp"
                android:layout_height="30dp"
                android:layout_marginTop="24dp"
                app:srcCompat="@android:drawable/ic_menu_mylocation" />

            <TextView
                android:id="@+id/adresseProfilView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:text="adresse"

                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="194dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="18dp"
              android:gravity="clip_horizontal"
              android:orientation="horizontal"
              >

            <ImageView
                android:layout_width="19dp"
                android:layout_height="30dp"
                android:layout_marginTop="24dp"
                app:srcCompat="@android:drawable/ic_menu_call" />

            <TextView
                android:id="@+id/telProfilView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:text="tel"

                />

          </LinearLayout>


          <LinearLayout
              android:layout_width="194dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="18dp"
              android:gravity="clip_horizontal"
              android:orientation="horizontal">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="30dp"
                android:layout_marginTop="24dp"
                app:srcCompat="@android:drawable/ic_dialog_email" />

            <TextView
                android:id="@+id/mailProfilView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:text="mail"

                />
          </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/aProposProfil"
            android:layout_marginTop="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoView"                 >


          <TextView
              android:id="@+id/ProposProfil"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginTop="24dp"
              android:text="A Propos de moi"
              android:textSize="20dp"
              android:textStyle="bold" />

          <TextView
              android:id="@+id/textaPropos"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginTop="24dp"
              android:text="texte"

              />

        </LinearLayout>


      </android.support.v7.widget.CardView>

    </FrameLayout>

  </android.support.v4.widget.NestedScrollView>


  <android.support.design.widget.FloatingActionButton
      android:id="@+id/favorisView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      app:layout_anchor="@id/app_bar_layout"
      app:layout_anchorGravity="end|bottom"
      android:layout_weight="1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/profilView"
      android:src="@drawable/ic_star_white_24dp"
      app:backgroundTint="@color/colorPrimaryDark"
      />


</android.support.design.widget.CoordinatorLayout>